--- a/windows/putty.rc
+++ b/windows/putty.rc
@@ -4,6 +4,7 @@
 #define APPDESC "SSH, Telnet and Rlogin client"
 
 #include "win_res.rc2"
+#include "winhelp.rc2"
 
 #ifndef NO_MANIFESTS
 1 RT_MANIFEST "putty.mft"
